--- a/case-study/src/index.html
+++ b/case-study/src/index.html
@@ -25,26 +25,25 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 
 
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="js/jquery-3.2.1.min.js"></script>
-  <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-  <script src="js/jquery.ajaxchimp.min.js"></script>
-  <script src="js/mail-script.js"></script>
-  <script src="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.js"></script>
-  <script src="vendors/nice-select/js/jquery.nice-select.js"></script>
-  <script src="js/mail-script.js"></script>
-  <script src="js/stellar.js"></script>
-  <script src="vendors/lightbox/simpleLightbox.min.js"></script>
-  <script src="js/custom.js"></script>
-  <script src="js/default-assets/card.js"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/popper.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+<script src="assets/js/jquery.ajaxchimp.min.js"></script>
+<script src="assets/js/mail-script.js"></script>
+<script src="assets/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.js"></script>
+<script src="assets/vendors/nice-select/js/jquery.nice-select.js"></script>
+<script src="assets/js/mail-script.js"></script>
+<script src="assets/js/stellar.js"></script>
+<script src="assets/vendors/lightbox/simpleLightbox.min.js"></script>
+<script src="assets/js/custom.js"></script>
+<script src="assets/js/default-assets/card.js"></script>
+<script src="assets/js/three-dot.js"></script>
 
 </body>
 </html>
