--- a/case-study/src/index.html
+++ b/case-study/src/index.html
@@ -43,7 +43,7 @@
 <script src="assets/vendors/lightbox/simpleLightbox.min.js"></script>
 <script src="assets/js/custom.js"></script>
 <script src="assets/js/default-assets/card.js"></script>
-<script src="assets/js/three-dot.js"></script>
+<!--<script src="assets/js/three-dot.js"></script>-->
 
 </body>
 </html>
