--- a/bai_thi/angular-bai-thi/src/index.html
+++ b/bai_thi/angular-bai-thi/src/index.html
@@ -23,8 +23,10 @@
   <!-- main css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
 <app-root></app-root>
 
 <script src="assets/js/jquery-3.2.1.min.js"></script>
